Re-ran the model based on new Tina data, and updated the paper text slightly.

--- a/paper_text_20170421.Rmd
+++ b/paper_text_20170421.Rmd
@@ -26,7 +26,7 @@ $$p(\theta, \phi | x, \sigma, r) \propto \prod_{i=1}^N \left[ \prod_{k=1}^{n_{ij
 
 Here $p$ represents a probability distribution. $p(x_{ijk} | \sigma_{ijk}, \phi_{ij}, r)$ is the probability distribution of the radiocarbon dates given the limiting dates, the 1-sigma standard deviation and the calibration curve. This is (as standard) assumed normally distributed: $x_{ijk} | \sigma_{ijk}, \phi_{ij}, r \sim N(r(\phi_{ij}), \sigma_{ijk}^2)$. The second term $p(\theta_i | \phi_{i1}, \phi_{i2})$ is the Bayesian prior distribution on the limiting ages given the true unknown sand bed age $\theta_i$. We assume that the sand bed age is uniformly distributed between the two limits, so that $\theta_i | \phi_{i1}, \phi_{i2} \sim U(\phi_{i1}, \phi_{i2})$. Finally the prior distributions on the limits are given flat prior distributions $p(\phi_{i1}) = p(\phi_{i2}) \propto 1$. They are informed solely by the radiocarbon ages.
 
-The model defined above can be fitted using the standard Bayesian method of Markov chain Monte Carlo (REF BROOKS ET AL), though we found this method to be very inefficient and consistently obtained convergence problems. Instead we approximate the model fitting stage by breaking up the model and fitting it to each individual sand beds. This runs the risk of obtaining sand beds not in chronological order, but in practice the sand beds are separated enough that this proves not to occur. We fit the model using numerical integration by creating a three dimensional high-resolution grid for the parameter set $(\phi_{i1}, \phi_{i2}, \theta_i)$ and evaluating the likelihood and prior distribution score as defined above for each combination. We then marginalise (sum) out the probabilities over the $\phi$ parameters to obtain a gridded posterior probability distribution for $\theta_i$. We use this posterior probability distribution for all subsequent output.
+The model defined above can be fitted using the standard Bayesian method of Markov chain Monte Carlo (REF BROOKS ET AL), though we found this method to be very inefficient and consistently obtained convergence problems. Instead we approximate the model fitting stage by breaking up the model and fitting it to each individual sand beds. This runs the risk of obtaining sand beds not in chronological order, but in practice the sand beds are separated enough that this proves not to occur, except in the case of sand bed 6 for which the minimum age prior distribution is set at the known age of sand bed 5. We fit the model using numerical integration by creating a three dimensional high-resolution grid for the parameter set $(\phi_{i1}, \phi_{i2}, \theta_i)$ and evaluating the likelihood and prior distribution score as defined above for each combination. We then marginalise (sum) out the probabilities over the $\phi$ parameters to obtain a gridded posterior probability distribution for $\theta_i$. We use this posterior probability distribution for all subsequent output.
 
 Each sand bed posterior distribution can be plotted as a probability distribution histogram, or summarise into mean, standard deviation, credibility interval. We generally report 95\% credibility intervals as standard. To create recurrence plots, we sample from the posterior distributions for each sand bed and subsequently create differences across a set of 10,000 posterior samples. These can similarly be summarised by histograms or credibility intervals. 
 
